--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,8 @@
   <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-<canvas id="canvas" width="800" height="500"></canvas>
-<script src="js/client.js"></script>
+  <canvas id="canvas" width="800" height="500"></canvas>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="js/client.js"></script>
 </body>
 </html>
