--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,15 @@
   <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
+  <div class="chat">
+    <ul id="messages"></ul>
+    <div class="chat-control">
+      <form id="chat-form">
+        <input id="message-box" autocomplete="off" title="chat"/>
+        <button id="send">Send</button>
+      </form>
+    </div>
+  </div>
   <canvas id="canvas" width="800" height="500"></canvas>
   <script src="/socket.io/socket.io.js"></script>
   <script src="js/client.js"></script>
