--- a/client/login/index.html
+++ b/client/login/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="/login/css/login.css">
 </head>
 <body>
-  <form method="post">
+  <form action="/auth" method="post">
     <div class="credentials">
       <h1>Log In</h1>
       <label for="usr">Username</label>
