--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>Submarine Upheaval</title>
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/static/css/main.css">
 </head>
 <body>
   <div class="chat">
@@ -15,6 +15,6 @@
   </div>
   <canvas id="canvas" width="800" height="500"></canvas>
   <script src="/socket.io/socket.io.js"></script>
-  <script src="js/client.js"></script>
+  <script src="/static/js/client.js"></script>
 </body>
 </html>
