--- a/client/login/index.html
+++ b/client/login/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>Submarine Upheaval Login</title>
-  <link rel="stylesheet" href="/login/css/login.css">
+  <link rel="stylesheet" href="/static/css/login.css">
 </head>
 <body>
   <form action="/auth" method="post">
