--- a/client/login/index.html
+++ b/client/login/index.html
@@ -13,6 +13,30 @@
       <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
       <button type="submit" class="loginbtn">Sign In</button>
     </div>
+    <div class="credentials createacc">
+      <p>Don't have an account? <a onclick="openPop()">Sign Up</a></p>
+    </div>
   </form>
+  <div id="pop1" class="popup">
+    <form action="/register" method="post">
+      <div class="credentials">
+        <h1>Create Account</h1>
+        <label for="email">Email</label>
+        <input type="text" placeholder="Enter Email" name="email" id="email" required>
+        <label for="usr">Username</label>
+        <input type="text" placeholder="Enter Username" name="usr" id="usr" required>
+        <label for="psw">Password</label>
+        <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
+        <button type="submit" class="loginbtn">Sign In</button>
+      </div>
+    </form>
+  </div>
+  <script>
+  var popup = document.getElementById('pop1');
+  function openPop() {popup.style.display = "block";}
+  window.onclick = function(event) {
+    if (event.target == popup) {popup.style.display = "none";}
+  };
+  </script>
 </body>
 </html>
