--- a/client/login/index.html
+++ b/client/login/index.html
@@ -4,8 +4,8 @@
   <link rel="stylesheet" href="/css/login.css">
 </head>
 <body>
-  <form action="/auth" method="post">
-    <div class="credentials">
+  <form class="signin" action="/auth" method="post">
+    <div class="userinfo">
       <h1>Log In</h1>
       <label for="usr">Username</label>
       <input type="text" placeholder="Enter Username" name="usr" id="usr" required>
@@ -18,8 +18,8 @@
     </div>
   </form>
   <div id="pop1" class="popup">
-    <form action="/register" method="post">
-      <div class="credentials">
+    <form class="register" action="/register" method="post">
+      <div class="userinfo">
         <h1>Create Account</h1>
         <label for="email">Email</label>
         <input type="text" placeholder="Enter Email" name="email" id="email" required>
@@ -27,7 +27,7 @@
         <input type="text" placeholder="Enter Username" name="usr" id="usr" required>
         <label for="psw">Password</label>
         <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
-        <button type="submit" class="loginbtn">Sign In</button>
+        <button type="submit" class="loginbtn">Register</button>
       </div>
     </form>
   </div>
