housekeeping and safer password storage

--- a/client/login/index.html
+++ b/client/login/index.html
@@ -24,9 +24,9 @@
         <label for="email">Email</label>
         <input type="text" placeholder="Enter Email" name="email" id="email" required>
         <label for="usr">Username</label>
-        <input type="text" placeholder="Enter Username" name="usr" id="usr" required>
+        <input type="text" placeholder="Enter Username" name="usr" id="usr2" required>
         <label for="psw">Password</label>
-        <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
+        <input type="password" placeholder="Enter Password" name="psw" id="psw2" required>
         <button type="submit" class="loginbtn">Register</button>
       </div>
     </form>
