--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,9 @@
       <ul id="messages"></ul>
       <div class="chat-control">
         <form id="chat-form">
+          <select id="recipient">
+            <option value="">Everyone</option>
+          </select>
           <input id="message-box" autocomplete="off" title="chat"/>
           <button id="send">Send</button>
         </form>
